14_03_19 Edycja CSS   display grid/flex

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <div id="container">
-        <div class="test">A_div_o_class="test"</div>
-        <div>B_zwykly_div</div>
-    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
 </body>
 </html>
