--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="calc.js"></script>
+    <!-- komentarz -->
 </head>
 <body>
     <div id="container">
